cabal-version:      3.0
name:               portfolio
version:            0.1.0.0
synopsis:           Website
category:           Web
build-type:         Simple

common warnings
    ghc-options: -Wall

executable portfolio
    import:           warnings
    main-is:          Main.hs
    other-modules:    Api
                    , Views
                    , Styles
    build-depends:    base ^>=4.18.3.0
                    , servant
                    , servant-server
                    , servant-lucid
                    , lucid
                    , warp
                    , wai-app-static
                    , text
                    , clay
    hs-source-dirs:   src
    default-language: Haskell2010
